- Added "Help messages" (accessible from "?" button)
- Added "Accessible information" usable for people with disabilities
- Added possibility to delete videos pressing the "delete" key
- Added detection of "Need login" videos
- Added more exlicit error messages
- Added "View error message" option on found errors
- Added link to "GNU GPL" licence website (in credits form)

- Revised 6 services:
    - YouTube (added support for embeded videos and added need login detection)
    - Tu.tv (added need login detection)
    - Metacafe
    - PornoTube
    - TuPorno
    - LiveLeak

- Changed licence to GNU GPL v3 (http://www.gnu.org/licenses/gpl.html)

- Fixed bug (Error: Disabling the automatic updates, the downloads were not started) 
- Fixed bug (Error: On restore session, the missing videos where not deleted from list)

- Revised and sorted the "Tab orders" into the application for a better accessibility
- Revised all shortcuts and replaced for Standard and cross-platform shortcuts

- Improved error detection (the "Bug report" is only displayed if is a "Connection error" or "Invalid url")
- Improved the "ProgressBar class" (now is more configurable)
- Improved internal "HTTP implementation" (full class rewrited)

- Updated english (UK) language file
- Updated Spanish (ES) language file
- Updated Catalan (CAT) language file 

1.7.1a:
-------

- Fixed bug (Error: downloads were not finished!! ** IMPORTANT **)
- Fixed bug (Error: "Display popup" option was not saved)
- Fixed bug (Error: prevent access violation on invalid videos)

1.7a
----

- Added 10 new services:
    - XTube
    - Zuuble
    - ZippyVideos (FLV & WMV videos)
    - Zedge
    - Blip
    - Ceknito
    - ZanyVideos
    - Zaable
    - YouTubeIslam
    - YourFileHost

- Revised 2 services:
    - Tu.tv (yes, again... :P)
    - MySpaceTv

- Fixed bug (Error: external links were not opened... such as "sf.net tracker", "homepage in information form", etc...)